# mediaserver_archive_manager

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum  protoData.proto
cmake/: FindPOSTGRES.cmake  FindPQXX.cmake
cmd/archive_manager/: main.go
internal/archive/: file.go  pipeline.go
internal/broker/: consumer.go  digest.go  error.go  init.go  producer.go  topic.go
internal/config/: load.go  parse.go  print.go
internal/controller/: controller.go  init.go
internal/db/: db_test.go  init.go  offset.go
internal/metrics/: init.go  init_test.go
internal/model/: frame.go
internal/protobuf/: protoData.pb.go  protoStructPrinter.go
internal/retention/: cleanup.go  init.go  purge.go
internal/router/: init.go
internal/router/handler/: health.go
internal/router/middleware/: metrics.go  request_id.go  session_id.go
internal/router/model/: user.go
src/services/manager/: config.cpp  initDatabase.cpp  initMessenger.cpp  main.cpp  thCameras.cpp  thConsumer.cpp  thDatabase.cpp  thRecorder.cpp
src/services/recorder/: config.cpp  initMessenger.cpp  main.cpp  thConsumer.cpp  thFileWriter.cpp  thSendOffset.cpp
src/shared/: manager.hpp  recorder.hpp
src/shared/camera/: archive.cpp  archive.hpp  archiveParameters.cpp  archiveParameters.hpp  cameraClient.cpp  cameraClient.hpp  stream.cpp  stream.hpp
src/shared/chronoName/: chronoName.cpp  chronoName.hpp
src/shared/configReader/: configMap.cpp  configMap.hpp
src/shared/frameParser/: frameParser.cpp  frameParser.hpp
src/shared/logPrinter/: logPrinter.cpp  logPrinter.hpp
src/shared/messenger/: messenger.cpp  messenger.hpp
src/shared/uuid/: uuid.cpp  uuid.hpp
